syntax = "proto3";
package v1;

import "google/protobuf/empty.proto";

message User {
    int64 id = 1;
    string user = 2;
    string email = 3;
}

// Request data to create new user
message CreateUserRequest{
    User user = 1;
}

// Contains data of created user
message CreateUserResponse{
    // ID of created user
    int64 id = 1;
}

// Contains list of all users
message ReadAllUserResponse{
    // list of users
    repeated User userlist = 1;
}

// Service to manage list of users
service UserService {

    // Create new user
    rpc Create(CreateUserRequest) returns (CreateUserResponse);

    // Read all users
    rpc ReadAll(google.protobuf.Empty) returns (ReadAllUserResponse);
}